[workspace.package]
name = "WeTEE"
authors = ["WeTEE DAO"]
edition = "2021"
homepage = "https://wetee.app"
license = "Apache 2.0"
repository = "https://github.com/wetee-dao/chain"
version = "0.1.0"

[workspace]
members = [
  # inks
  "inks/Dao",
  "inks/Subnet",
  "inks/Cloud",
  "inks/Pod",
  "inks/Test",
  # "inks/Bridge",

  "primitives",
]
resolver = "2"

[workspace.dependencies]
ink = { git = "https://github.com/use-ink/ink",  tag = "v6.0.0-beta.1", default-features = false }
ink_precompiles = { git = "https://github.com/use-ink/ink",  tag = "v6.0.0-beta.1", default-features = false }
ink_e2e = { git = "https://github.com/use-ink/ink",  tag = "v6.0.0-beta.1" }
ink_sandbox = { git = "https://github.com/use-ink/ink.git", tag = "v6.0.0-beta.1" }
# ink = { version = "6.0.0-beta.1", default-features = false  }
# ink_e2e = { version = "6.0.0-beta.1" }

scale = { package = "parity-scale-codec", version = "3.7.4", default-features = false }
scale-info = { version = "2.11", default-features = false }
primitives = { path = "primitives" }