[workspace.package]
name = "WeTEE"
authors = ["WeTEE DAO"]
edition = "2024"
homepage = "https://wetee.app"
license = "Apache 2.0"
repository = "https://github.com/wetee-dao/chain"
version = "0.1.0"

[workspace]
members = [
  # polkadot (wrevive / PolkaVM)
  "revives/Pod",
  "revives/Subnet",
  "revives/Cloud",

  "primitives",
]
resolver = "2"

[workspace.dependencies]
scale = { package = "parity-scale-codec", version = "3.7.4", default-features = false }
scale-info = { version = "2.11", default-features = false }
primitives = { path = "primitives2" }