[package]
name = "primitives"
version = "0.1.0"
authors = ["BaiL"]
edition = "2021"

[dependencies]
ink = { workspace = true, default-features = false, features = ["unstable-hostfn"] }
scale-info = { workspace = true, default-features = false }
# ink = { git = "https://github.com/use-ink/ink", branch = "master", default-features = false, features = ["unstable-hostfn"] }

[features]
default = ["std"]
std = [
    "ink/std",
]
