[package]
name = "primitives"
version = "0.1.0"
authors = ["BaiL"]
edition = "2021"

[dependencies]
ink = { workspace = true, default-features = false, features = ["unstable-hostfn"] }
ink_precompiles = { workspace = true, default-features = false }
scale-info = { workspace = true, default-features = false }

[features]
default = ["std"]
std = [
    "ink/std",
]
