[package]
authors = ["BaiL"]
edition = "2021"
name = "cloud"
version = "0.1.0"

[dependencies]
ink = {workspace = true, default-features = false, features = ["unstable-hostfn"]}
primitives = {path = "../../primitives", package = "primitives", default-features = false}
scale = {workspace = true, default-features = false, features = ["derive"]}
scale-info = {workspace = true, default-features = false}

# Runing pod 
pod = {path = "../Pod", default-features = false, features = ["ink-as-dependency"]}
subnet = {path = "../Subnet", default-features = false, features = ["ink-as-dependency"]}

[dev-dependencies]
ink_e2e = {workspace = true}

[lib]
path = "src/lib.rs"

[features]
default = ["std"]
e2e-tests = []
ink-as-dependency = []
std = [
  "ink/std",
  "primitives/std",
  "pod/std",
  "subnet/std",
]
