[package]
authors = ["[your_name] <[your_email]>"]
edition = "2021"
name = "dao"
version = "0.1.0"

[dependencies]
ink = {workspace = true, default-features = false, features = ["unstable-hostfn"]}
scale-info = { workspace = true, default-features = false }
primitives = {path = "../../primitives", package = "primitives", default-features = false}

[dev-dependencies]
ink_e2e = {workspace = true}

[lib]
path = "src/lib.rs"

[features]
default = ["std"]
e2e-tests = []
ink-as-dependency = []
std = [
  "ink/std",
  "primitives/std",
]
