[package]
name = "subnet"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink = { git = "https://github.com/use-ink/ink", branch = "master", default-features = false, features = ["unstable-hostfn"] }
primitives = {path = "../../primitives", package = "primitives", default-features = false}

[dev-dependencies]
ink_e2e = { git = "https://github.com/use-ink/ink", branch = "master" }

[lib]
path = "src/lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "primitives/std"
]
ink-as-dependency = []
e2e-tests = []
