[package]
name = "test"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink = { workspace = true, default-features = false, features = ["unstable-hostfn"] }
primitives = { path = "../../primitives", package = "primitives", default-features = false }

[dev-dependencies]
ink_e2e = { workspace = true }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "primitives/std",
]
ink-as-dependency = []
e2e-tests = []
