[package]
name = "subnet"
version = "0.1.0"
authors = ["BaiL"]
edition = "2021"

[dependencies]
ink = { workspace = true, default-features = false, features = ["unstable-hostfn"] }
scale-info = { workspace = true, default-features = false }
primitives = {path = "../../primitives", package = "primitives", default-features = false}

[dev-dependencies]
ink_e2e = { workspace = true }
ink_sandbox = { workspace = true }

[lib]
path = "src/lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "primitives/std"
]
ink-as-dependency = []
e2e-tests = []
