[package]
name = "cloud-polkadot"
version = "0.1.0"
edition = "2021"
description = "Cloud 合约 PolkaVM/wrevive 版本，供 PolkaVM 部署"

[lib]
name = "cloud_polkadot"
path = "src/lib.rs"

[dependencies]
pvm-bump-allocator = { git = "https://github.com/paritytech/cargo-pvm-contract", branch = "main" }
polkavm-derive = "0.31"
alloy-core = { version = "1.5", default-features = false, features = ["sol-types"] }
pallet-revive-uapi = { version = "0.10", default-features = false }
parity-scale-codec = { version = "3", default-features = false, features = ["derive"] }
wrevive-macro = { path = "../../../wrevive/crates/wrevive-macro" }
wrevive-api = { path = "../../../wrevive/crates/wrevive-api", default-features = false, features = ["off_chain"] }
primitives = { path = "../../primitives", package = "polkadot-primitives" }

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
overflow-checks = false

[dev-dependencies]
wrevive-api = { path = "../../../wrevive/crates/wrevive-api", default-features = false, features = ["off_chain"] }
