[package]
name = "cloud"
version = "0.1.0"
edition = "2024"
description = "Cloud 合约 PolkaVM/wrevive 版本，供 PolkaVM 部署"

[[bin]]
name = "cloud"
path = "src/contract.rs"

[dependencies]
pvm-bump-allocator = { git = "https://github.com/paritytech/cargo-pvm-contract", branch = "main" }
polkavm-derive = "0.31"
alloy-core = { version = "1.5", default-features = false, features = ["sol-types"] }
pallet-revive-uapi = { version = "0.10", default-features = false }
parity-scale-codec = { version = "3", default-features = false, features = ["derive"] }
pvm-contract-types = { git = "https://github.com/paritytech/cargo-pvm-contract", branch = "main" }
wrevive-macro = { workspace = true }
wrevive-api = { workspace = true, features = ["on_chain"] }
primitives = { workspace = true }
pod = { path = "../Pod", features = ["api"] }
subnet = { path = "../Subnet", features = ["api"] }

[dev-dependencies]
wrevive-api = { workspace = true, features = ["off_chain"] }
