[package]
name = "dao"
version = "0.1.0"
edition = "2024"
description = "DAO 合约 PolkaVM/wrevive 版本，供 PolkaVM 部署"

[[bin]]
name = "dao"
path = "src/contract.rs"

[dependencies]
pvm-bump-allocator = { git = "https://github.com/paritytech/cargo-pvm-contract", branch = "main" }
polkavm-derive = "0.31"
alloy-core = { version = "1.5", default-features = false, features = ["sol-types"] }
pallet-revive-uapi = { version = "0.10", default-features = false }
parity-scale-codec = { version = "3", default-features = false, features = ["derive"] }
pvm-contract-types = { git = "https://github.com/paritytech/cargo-pvm-contract", branch = "main" }
scale-info = { version = "2.11", default-features = false, features = ["derive"] }
wrevive-macro = { workspace = true }
wrevive-api = { workspace = true, features = ["on_chain"] }
primitives = { workspace = true }

[dev-dependencies]
wrevive-api = { workspace = true, features = ["off_chain"] }
