[package]
name = "proxy"
version = "0.1.0"
edition = "2024"
description = "代理合约 PolkaVM/wrevive 版本，用于合约升级（透明代理）"

[features]
default = []
api = []

[[bin]]
name = "proxy"
path = "src/contract.rs"

[lib]
name = "proxy"
path = "src/contract.rs"

[dependencies]
pvm-bump-allocator = { git = "https://github.com/paritytech/cargo-pvm-contract", branch = "main" }
polkavm-derive = "0.31"
alloy-core = { version = "1.5", default-features = false, features = ["sol-types"] }
pallet-revive-uapi = { version = "0.10", default-features = false }
parity-scale-codec = { version = "3", default-features = false, features = ["derive"] }
pvm-contract-types = { git = "https://github.com/paritytech/cargo-pvm-contract", branch = "main" }
wrevive-macro = { path = "../../../wrevive/crates/wrevive-macro" }
wrevive-api = { path = "../../../wrevive/crates/wrevive-api", default-features = false, features = ["on_chain"] }
primitives = { path = "../../primitives", package = "primitives" }

[dev-dependencies]
wrevive-api = { path = "../../../wrevive/crates/wrevive-api", default-features = false, features = ["off_chain"] }
